--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "prepare": "husky install"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "devDependencies": {
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "vitest": "^0.23.4"
   }
 }
