add test:staged script with --run flag

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
+    "test:staged": "vitest --run",
     "prepare": "husky install"
   },
   "standard": {
